--- a/contact us.html
+++ b/contact us.html
@@ -72,7 +72,8 @@
         <h1><b> Founder And Director </b></h1>
         <h1><b> Of Advance Computer Education </b></h1> 
         </font>
-         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.5010268895976!2d79.11983887564415!3d21.132450284208453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c75b6aaaaaab%3A0x39420933bccdb143!2sAdvance%20Computer%20Education!5e0!3m2!1sen!2sin!4v1722697660999!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"> 
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.5010268895976!2d79.11983887564415!3d21.132450284208453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c75b6aaaaaab%3A0x39420933bccdb143!2sAdvance%20Computer%20Education!5e0!3m2!1sen!2sin!4v1722697660999!5m2!1sen!2sin" width="450
+             " height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"> 
         </div>
         </div>
     </div>
